@@ -153,7 +153,7 @@ int parseRCPOT(Spec spec, Package pkg, const char *field, int tag,
 	    case RPMTAG_PROVIDEFLAGS:
 	    case RPMTAG_OBSOLETEFLAGS:
 		/* Add prereq on rpmlib that has versioned dependencies. */
-		if (!rpmExpandNumeric("%{_noVersionedDependencies}"))
+		if (!rpmExpandNumeric("%{?_noVersionedDependencies}"))
 		    (void) rpmlibNeedsFeature(h, "VersionedDependencies", "3.0.3-1");
 		/*@switchbreak@*/ break;
 	    default:
