@@ -19,8 +19,9 @@ struct rpmfc_s {
     int fknown;		/*!< no. of classified files */
     int fwhite;		/*!< no. of "white" files */
     int ix;		/*!< current file index */
-    int skipProv;	/*!< don't auto-generate Provides:? */
-    int skipReq;	/*!< don't auto-generate Requires:? */
+    int skipProv;	/*!< Don't auto-generate Provides:? */
+    int skipReq;	/*!< Don't auto-generate Requires:? */
+    int tracked;	/*!< Versioned Provides: tracking dependency added? */
 
     ARGV_t fn;		/*!< (#files) file names */
     ARGI_t fcolor;	/*!< (#files) file colors */
