@@ -16,7 +16,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.22
+Release: 0.23
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -459,6 +459,9 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
+* Thu Dec 12 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.23
+- fix: add rpmlib(VersionedDependencies) if versioned Provides: found.
+
 * Wed Dec 11 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.22
 - rebuild against glibc with TLS support.
 
