@@ -43,6 +43,7 @@
 	- internal automagic dependency generation (disabled for now).
 	- don't generate dependencies unless execute bit is set.
 	- enable internal automagic dependency generation as default.
+	- fix: add rpmlib(VersionedDependencies) if versioned Provides: found.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
